# rupy

./: .gitignore  Cargo.toml  justfile
python/: test1.py
src/: lib.rs
