[package]
name = "rupy"
version = "0.1.0"
authors = ["Stefan Kroboth <stefan.kroboth@gmail.com>"]
edition = "2018"

[lib]
name = "rupy"
crate-type = ["cdylib"]

[dependencies]
numpy = "0.4.1"
ndarray = "*"
# pyo3 = { version = "0.6.0", features = ["extension-module"] }

[dependencies.pyo3]
version = "0.6.0"
# version = "0.5.2"
features = ["extension-module"]
